# QuantumQuest-develop

./: .gitignore  README.md  package-lock.json  package.json
backend/: Dockerfile  nginx.conf  pyproject.toml  requirements.txt
backend/src/: alembic.ini
backend/src/singhit_app/api/: server.py
backend/src/singhit_app/api/analytics/model/: base.py
backend/src/singhit_app/api/auth/dependencies/: auth_user.py
backend/src/singhit_app/api/auth/models/: token.py  users.py
backend/src/singhit_app/api/auth/repositories/: users.py
backend/src/singhit_app/api/auth/routes/: __init__.py
backend/src/singhit_app/api/auth/routes/auth_route/: auth.py
backend/src/singhit_app/api/auth/routes/user_route/: users.py
backend/src/singhit_app/api/auth/utils/: mail_templates.py  security.py
backend/src/singhit_app/api/health/routes/: __init__.py  health.py
backend/src/singhit_app/api/projects/routes/health/: health.py
backend/src/singhit_app/api/tasks/routes/: __init__.py
backend/src/singhit_app/base/: base_model.py  base_repo.py
backend/src/singhit_app/core/: config.py  logger.py
backend/src/singhit_app/db/: __init__.py  app_events.py  config.py
backend/src/singhit_app/db/migrations/: env.py
backend/src/singhit_app/db/migrations/versions/: 8cdfba409fca_users_roles_permissions.py  d5ffec09456c_users_schema.py
backend/src/singhit_app/services/: mail_service.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/components/: ClockModal.js  particleBackground.js
frontend/src/pages/: index.js
frontend/src/services/: authService.js  (+1 more)
(+22 files in other folders)
