[tool.poetry]
name = "singhit_api"
version = "1.0.0"
description = ""
authors = ["Chukwuka Kennedy Uche <chukwukakennedy.uche@flemingcollege.ca>"]

readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.0.0"
fastapi = "^0.85.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"